<?xml version="1.0"?>
<package format="2">
  <name>laser_scan_to_point_cloud</name>
  <version>0.0.0</version>
  <description>The laser_scan_to_point_cloud package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>laser_geometry</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
