<?xml version="1.0"?>
<package format="2">
  <name>low_performance_lidar</name>
  <version>0.0.0</version>
  <description>The low_performance_lidar package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
