<?xml version="1.0"?>
<package format="2">
  <name>pole_eliminator</name>
  <version>0.0.0</version>
  <description>The pole_eliminator package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
