<?xml version="1.0"?>
<package format="2">
  <name>ros_utils</name>
  <version>0.0.0</version>
  <description>The ros_utils package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
