<?xml version="1.0"?>
<package format="2">
  <name>object_detection_recorder</name>
  <version>0.0.0</version>
  <description>The object_detection_recorder package</description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>object_detector_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
